<resources>
    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="login_background">login background</string>
    <string name="app_snipp">Lab 3_1</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="remember_me">Remember Me</string>
    <string name="sign_up">SIGN UP</string>
    <string name="app_name">Lab</string>
    <string name="lab_1_1">LAB 1.1</string>
    <string name="lab_3_1">Lab 3.1</string>
    <string name="lab_3_2">Lab 3.2</string>
    <string name="lab_4">lab 4.1</string>
    <string name="lab_5_1">lab 5.1</string>
    <string name="lab_5_2">lab 5.2</string>
    <string name="lab_9">lab 9</string>
    <string name="lab_10">lab 10</string>
    <string name="lab_11">lab 11</string>
    <string name="lab_12">lab 12</string>
    <string name="lab_4_2">Lab 4.2</string>
    <string name="lab_11_1">lab 11.1</string>
</resources>