<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/loginCard"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor"
    android:elevation="5dp"
    app:cardCornerRadius="@dimen/loginCardRadius">

    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">

        <TextView
            style="@style/headerTextPrimary"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/register" />

        <android.support.design.widget.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <EditText
                android:layout_height="35dp"
                android:paddingStart="10dp"
                style="@style/modifiedEditText"
                android:background="@drawable/rounded_edittext"
                tools:ignore="RtlSymmetry"
                android:hint="@string/name"
                android:inputType="text"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <EditText
                android:layout_height="35dp"
                android:paddingStart="10dp"
                android:background="@drawable/rounded_edittext"
                style="@style/modifiedEditText"
                android:hint="@string/mobile_number"
                android:inputType="text"
                android:maxLines="1"
                tools:ignore="RtlSymmetry" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <EditText
                android:layout_height="35dp"
                android:paddingStart="10dp"
                android:background="@drawable/rounded_edittext"
                style="@style/modifiedEditText"
                android:hint="@string/login_email_hint"
                android:inputType="textEmailAddress"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <EditText
                android:layout_height="35dp"
                android:paddingStart="10dp"
                android:background="@drawable/rounded_edittext"
                style="@style/modifiedEditText"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            style="@style/loginButton"
            android:layout_gravity="center"
            android:text="@string/register" />

        <TextView
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/signup_login_hint"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            android:textStyle="bold" />

    </LinearLayout>
</android.support.v7.widget.CardView>