<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor"
    android:elevation="5dp">

    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">

        <TextView
            style="@style/headerTextPrimary3_1"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/register" />

        <EditText
            android:id="@+id/textInputName"
            style="@style/modifiedEditText"
            android:background="@drawable/rounded_edittext"
            android:hint="Name"
            android:layout_marginTop="20dp"
            android:layout_height="40dp"
            android:maxLines="1"
            android:paddingLeft="20dp"
            android:inputType="text" />

        <EditText
            android:id="@+id/textInputPhone"
            style="@style/modifiedEditText"
            android:background="@drawable/rounded_edittext"
            android:hint="Phone"
            android:layout_marginTop="20dp"
            android:layout_height="40dp"
            android:maxLines="1"
            android:paddingLeft="20dp"
            android:inputType="text" />

        <EditText
            android:id="@+id/textInputEmail"
            style="@style/modifiedEditText"
            android:background="@drawable/rounded_edittext"
            android:hint="Email"
            android:layout_marginTop="20dp"
            android:layout_height="40dp"
            android:maxLines="1"
            android:paddingLeft="20dp"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/textInputPassword"
            style="@style/modifiedEditText"
            android:layout_marginTop="20dp"
            android:layout_height="40dp"
            android:background="@drawable/rounded_edittext"
            android:maxLines="1"
            android:paddingLeft="20dp"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/loginButton3_1"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:text="Register" />

        <TextView
            style="@style/parentView"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/signup_login_hint"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>